# MovieTicketBookingSystem

./: .gitignore  .gitmodules  readme.md
source/: App.cpp  App.h  CMakeLists.txt  MockAuthRepository.h  MovieTicketBookingSystem.db  MovieTicketBookingSystem.sql  SessionManager.cpp  SessionManager.h  UserManager.cpp  UserManager.h  basic_service_test.cpp  build_output.txt  build_output2.txt  consolidated_test.cpp  database.db  dbcreation.cpp  demo.cpp  demo_app.h  installSQLite.md  main.cpp  movies.db  runDatabase.cpp  service_test.cpp  simple_test.cpp  test.sql  user_demo.cpp  user_demo_simplified.cpp  very_basic.cpp
source/UI/: SFMLUIManager.cpp  SFMLUIManager.h  SFMLUIManager_AddShowtimes.cpp  install-wxWidgets.md  installQt.md  installSFML.md
source/UI/SFML_TEST/: App.cpp  App.h  AppState.h  Button.cpp  Button.h  MainMenu.cpp  MainMenu.h  RoundedRectangleShape.h  SignInPage.cpp  SignInPage.h  SignUpPage.cpp  SignUpPage.h  TextBox.cpp  TextBox.h  mainOld.cpp
source/USER_pending/: Admin.cpp  Admin.h  AdminContextCreator.cpp  AdminContextCreator.h  BookingService.cpp  BookingService.h  BookingServiceVisitor.h  Guest.cpp  Guest.h  GuestContextCreator.cpp  GuestContextCreator.h  IBookingService.h  ILoginService.h  IMovieManagerService.h  IMovieViewerService.h  IRegisterService.h  IServiceVisitor.h  IUserContext.h  IUserInformationService.h  IViewBookingHistoryService.h  IVisitor.h  Interfaces.h  LoginService.cpp  LoginService.h  LoginServiceVisitor.h  LogoutService.cpp  LogoutService.h  LogoutServiceVisitor.cpp  LogoutServiceVisitor.h  MovieManagerService.h  MovieMangerServiceVisitor.cpp  MovieMangerServiceVisitor.h  MovieViewerService.h  MovieViewerServiceVisitor.cpp  MovieViewerServiceVisitor.h  RegisterService.cpp  RegisterService.h  RegisterServiceVisitor.cpp  RegisterServiceVisitor.h  ServiceRegistry.h  (+12 more)
source/build-release/: ALL_BUILD.vcxproj  App.vcxproj  App.vcxproj.filters  CMakeCache.txt  MovieTicketBookingSystem.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  sqlite3.vcxproj  sqlite3.vcxproj.filters
source/build-release/App.dir/Release/: App.exe.recipe
source/build-release/Release/: sqlite3.lib
source/build_debug/: ALL_BUILD.vcxproj  App.vcxproj  App.vcxproj.filters  CMakeCache.txt  MovieTicketBookingSystem.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  sqlite3.vcxproj  sqlite3.vcxproj.filters
source/build_debug/App.dir/Debug/: App.exe.recipe
source/build_release/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  App.vcxproj  App.vcxproj.filters  CMakeCache.txt  MovieTicketBookingSystem.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  sqlite3.vcxproj  sqlite3.vcxproj.filters
source/build_release/App.dir/Release/: App.exe.recipe
source/build_release/Release/: sqlite3.lib
source/build_release/sqlite3.dir/Release/: sqlite3.lib.recipe
source/context/: AdminContextCreator.cpp  AdminContextCreator.h  GuestContextCreator.cpp  GuestContextCreator.h  IUserContext.h  UserContextCreator.cpp  UserContextCreator.h  UserContextFactory.h
source/core/: ServiceRegistry.h
source/database/: DatabaseConnection.cpp  DatabaseConnection.h  add_seats.sql  database.sql
source/diagram/Class_diagram/: Authentication+UserService.md  CoreServices.md  Database.md
source/docs/: Doxyfile  README.md  generate_docs.bat  generate_docs.ps1  mainpage.dox
source/docs/output/html/: AccountInformation_8h.html  AccountInformation_8h.js  AccountInformation_8h_source.html  AdminContextCreator_8cpp.html  AdminContextCreator_8cpp_source.html  AdminContextCreator_8h.html  AdminContextCreator_8h.js  AdminContextCreator_8h_source.html  Admin_8cpp.html  Admin_8cpp_source.html  Admin_8h.html  Admin_8h.js  Admin_8h_source.html  App_8cpp.html  App_8cpp_source.html  App_8h.html  (+485 more)
source/model/: AccountInformation.h  Admin.cpp  Admin.h  Booking.cpp  Booking.h  CoupleSeat.cpp  CoupleSeat.h  Guest.cpp  Guest.h  IMovie.h  ISeat.h  Movie.cpp  Movie.h  SeatFactory.h  ShowTime.cpp  ShowTime.h  SingleSeat.cpp  SingleSeat.h  User.h
source/repository/: .gitignore  AuthenticationRepositorySQL.cpp  AuthenticationRepositorySQL.h  BookingRepositorySQL.cpp  BookingRepositorySQL.h  BookingView.cpp  BookingView.h  IAuthenticationRepository.h  IBookingRepository.h  IBookingRepositorySQL.h  IMovie.h  IMovieManagerService.h  IMovieRepository.h  IMovieViewerService.h  Movie.cpp  Movie.h  MovieDTO.cpp  MovieDTO.h  MovieManagerService.cpp  MovieManagerService.h  MovieMapper.cpp  MovieMapper.h  MovieRepositorySQL.cpp  MovieRepositorySQL.h  MovieTicketBookingSystem.db  MovieTicketBookingSystem.sql  MovieViewerService.cpp  MovieViewerService.h  SeatView.cpp  SeatView.h  main.cpp  my_database.db
source/service/: BookingService.cpp  BookingService.h  IBookingService.h  ILoginService.h  ILogoutService.h  IMovieManagerService.h  IMovieViewerService.h  IRegisterService.h  IUserInformationService.h  LoginService.cpp  LoginService.h  LogoutService.cpp  LogoutService.h  MovieManagerService.cpp  MovieManagerService.h  MovieViewerService.cpp  MovieViewerService.h  RegisterService.cpp  RegisterService.h  UserInformationService.cpp  UserInformationService.h  ViewBookingHistoryService.cpp  ViewBookingHistoryService.h
source/test/: AuthenticationServiceTest.cpp  CMakeLists.txt  SessionAndRoleTest.cpp  UserInformationTest.cpp  VisitorServiceTest.cpp
source/tests/: AuthenticationServiceTest.cpp  BookingRepositoryDBTest.cpp  BookingRepositoryTest.cpp  BookingServiceDBTest.cpp  BookingViewTest.cpp  CMakeLists.txt  MovieViewerServiceDBTest.cpp  SessionAndRoleTest.cpp  UserInformationTest.cpp  VisitorServiceTest.cpp  database.db  database.sql
source/visitor/: BookingServiceVisitor.cpp  BookingServiceVisitor.h  IServiceVisitor.h  IVisitor.h  LoginServiceVisitor.cpp  LoginServiceVisitor.h  LogoutServiceVisitor.cpp  LogoutServiceVisitor.h  MovieMangerServiceVisitor.cpp  MovieMangerServiceVisitor.h  MovieViewerServiceVisitor.cpp  MovieViewerServiceVisitor.h  RegisterServiceVisitor.cpp  RegisterServiceVisitor.h  ViewBookingHistoryVisitor.cpp
(+210 files in other folders)
